Started Rework on Shop UI. No matter how many items we have, the shop won't overlap with the sound or settings buttons. Also added a new shop opening animation (courtesy of ctrl+c ctrl+v), added a cool overlay to the shop, and put the message into a modal (although the animation for the modal needs to be fixed)

--- a/src/app/app.page-main.settings.css
+++ b/src/app/app.page-main.settings.css
@@ -42,7 +42,7 @@ input:active {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -59,6 +59,7 @@ input:active {
   padding: 20px;
   overflow: auto;
   border: 1px solid green;
+  border-radius: 9px;
   -webkit-animation-name: slideIn;
   -webkit-animation-duration: 0.4s;
   animation-name: slideIn;
@@ -134,6 +135,25 @@ input:active {
   background-color: greenyellow;
   outline:none;
   cursor: pointer;
+}
+/*
+  Scrollbar css (not compatible with firefox or IE)
+*/
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: green;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: greenyellow
 }
 
 
